feat: 게시글 상세 조회 구현 및 스크립트 추가