@@ -2,7 +2,6 @@ package com.example.anyword.repository;
 
 import com.example.anyword.entity.ArticleImageEntity;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Repository;
 
 @Repository
@@ -15,11 +14,12 @@ public class ArticleImageRepository extends BaseRepository<ArticleImageEntity>{
   /**
    * article 의 모든 이미지 list로
    */
-  public List<ArticleImageEntity> findByArticleId(Long articleId){
+  public List<String> findByArticleId(Long articleId){
     return store.values()
         .stream()
         .filter(image -> image.getArticleId().equals(articleId))
-        .collect(Collectors.toList());
+        .map(ArticleImageEntity::getImageUrl)
+        .toList();
   }
 
   /**
